repairnator.maven.buildproject.log
/root/workspace/spring-projects/spring-data-commons/264284792/src/test/java/org/springframework/data/repository/core/support/EventPublishingRepositoryProxyPostProcessorUnitTests.java:254: error: cannot find symbol
		@Getter(onMethod = @__(@DomainEvents)) Collection<? extends Object> events;
		                    ^
  symbol:   class __
  location: class MultipleEvents
/root/workspace/spring-projects/spring-data-commons/264284792/src/test/java/org/springframework/data/repository/core/support/EventPublishingRepositoryProxyPostProcessorUnitTests.java:259: error: cannot find symbol
		@Getter(onMethod = @__(@DomainEvents)) final Collection<? extends Object> events;
		                    ^
  symbol:   class __
  location: class EventsWithClearing
/root/workspace/spring-projects/spring-data-commons/264284792/src/test/java/org/springframework/data/repository/core/support/EventPublishingRepositoryProxyPostProcessorUnitTests.java:267: error: cannot find symbol
		@Getter(onMethod = @__(@DomainEvents)) Object event;
		                    ^
  symbol:   class __
  location: class OneEvent
3 errors

[INFO] /root/workspace/spring-projects/spring-data-commons/264284792/src/main/java/org/springframework/data/convert/JodaTimeConverters.java: Recompile with -Xlint:deprecation for details.
[INFO] 
[INFO] --- com.springsource.bundlor.maven:1.0.0.RELEASE:bundlor (bundlor) @ spring-data-commons ---
Manifest written to '/root/workspace/spring-projects/spring-data-commons/264284792/target/classes/META-INF/MANIFEST.MF'
[INFO] 
[INFO] --- apt-maven-plugin:1.1.3:test-process (default) @ spring-data-commons ---
[INFO] 
[INFO] --- maven-resources-plugin:2.6:testResources (default-testResources) @ spring-data-commons ---
[INFO] Using 'UTF-8' encoding to copy filtered resources.
[INFO] Copying 12 resources
[INFO] 
[INFO] --- maven-compiler-plugin:3.6.0:testCompile (default-testCompile) @ spring-data-commons ---
[INFO] Changes detected - recompiling the module!
[INFO] Compiling 233 source files to /root/workspace/spring-projects/spring-data-commons/264284792/target/test-classes
[INFO] /root/workspace/spring-projects/spring-data-commons/264284792/src/test/java/org/springframework/data/convert/BytecodeGeneratingEntityInstantiatorUnitTests.java: Some input files use or override a deprecated API.
[INFO] /root/workspace/spring-projects/spring-data-commons/264284792/src/test/java/org/springframework/data/convert/BytecodeGeneratingEntityInstantiatorUnitTests.java: Recompile with -Xlint:deprecation for details.
[INFO] 
[INFO] --- maven-surefire-plugin:2.19.1:test (default-test) @ spring-data-commons ---
[INFO] Tests are skipped.
[INFO] 
[INFO] --- maven-jar-plugin:3.0.2:jar (default-jar) @ spring-data-commons ---
[INFO] Building jar: /root/workspace/spring-projects/spring-data-commons/264284792/target/spring-data-commons-1.13.7.BUILD-SNAPSHOT.jar
[INFO] 
[INFO] >>> maven-source-plugin:3.0.1:jar (attach-sources) > generate-sources @ spring-data-commons >>>
[INFO] 
[INFO] --- maven-enforcer-plugin:1.3.1:enforce (enforce-rules) @ spring-data-commons ---
[INFO] Skipping Rule Enforcement.
[INFO] 
[INFO] <<< maven-source-plugin:3.0.1:jar (attach-sources) < generate-sources @ spring-data-commons <<<
[INFO] 
[INFO] --- maven-source-plugin:3.0.1:jar (attach-sources) @ spring-data-commons ---
[INFO] Building jar: /root/workspace/spring-projects/spring-data-commons/264284792/target/spring-data-commons-1.13.7.BUILD-SNAPSHOT-sources.jar
[INFO] 
[INFO] --- maven-install-plugin:2.4:install (default-install) @ spring-data-commons ---
[INFO] Installing /root/workspace/spring-projects/spring-data-commons/264284792/target/spring-data-commons-1.13.7.BUILD-SNAPSHOT.jar to /root/./workspace/spring-projects/spring-data-commons/264284792/.m2/org/springframework/data/spring-data-commons/1.13.7.BUILD-SNAPSHOT/spring-data-commons-1.13.7.BUILD-SNAPSHOT.jar
[INFO] Installing /root/workspace/spring-projects/spring-data-commons/264284792/pom.xml to /root/./workspace/spring-projects/spring-data-commons/264284792/.m2/org/springframework/data/spring-data-commons/1.13.7.BUILD-SNAPSHOT/spring-data-commons-1.13.7.BUILD-SNAPSHOT.pom
[INFO] Installing /root/workspace/spring-projects/spring-data-commons/264284792/target/spring-data-commons-1.13.7.BUILD-SNAPSHOT-sources.jar to /root/./workspace/spring-projects/spring-data-commons/264284792/.m2/org/springframework/data/spring-data-commons/1.13.7.BUILD-SNAPSHOT/spring-data-commons-1.13.7.BUILD-SNAPSHOT-sources.jar
[INFO] ------------------------------------------------------------------------
[INFO] BUILD SUCCESS
[INFO] ------------------------------------------------------------------------
[INFO] Total time: 26.155 s
[INFO] Finished at: 2018-12-10T14:06:49+01:00
[INFO] Final Memory: 47M/1312M
[INFO] ------------------------------------------------------------------------
